<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <GVL Name="GVL_MC" Id="{e6112190-7ee2-4c69-9f2e-cd1d96ada747}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	nNumMovers					: UINT := 12;
	nNumActiveMovers 			: UINT := 0;
	nNumTracks					: UINT := 1;
	XtsShortcutOid				: otcid := 16#010100B0 ;
	XtsOutterLoopOid 			: otcid := 16#01010300;
END_VAR

VAR_GLOBAL
	//fbXtsXlMoverUtility 		:	ARRAY[1..nNumMovers] OF FB_XtsXlMoverUtility;
	fbXtsEnvironment			: 	FB_XtsEnvironment;
	ipXtsProcessingUnit			:   I_XtsProcessingUnit1;
	cmdFeedback					: 	XtsCommandFeedback;
	buffer						: 	BYTE;
	
	fbMover						:	ARRAY[1..GVL_MC.nNumMovers] OF FB_Mover;
	
	aDynamics					:  	DynamicConstraint_PathXY;
	Feedback 					:	ARRAY[1..GVL_MC.nNumMovers] OF MC_PlanarFeedback;
	TrackFeedback 				:	ARRAY[1..GVL_MC.nNumTracks] OF MC_PlanarFeedback;
	aMcTracks					:	ARRAY[1..GVL_MC.nNumTracks] OF MC_PlanarTrack;
	ExitSystem 					: 	MC_PlanarTrackConnectionOut;
	EnterSystem 				:	MC_PlanarTrackConnectionIn;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>